@@ -87,7 +87,11 @@
                     <execution>
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>org.example.framefusion_gp.HelloApplication</mainClass>
+                            <mainClass>org.example.framefusion_gp.FrameFusion</mainClass>
+                             <vmArgs>
+                                --module-path C:/Users/User/Downloads/openjfx-21.0.7_windows-x64_bin-sdk/javafx-sdk-21.0.7/lib
+                                --add-modules javafx.controls,javafx.fxml
+                            </vmArgs>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
